force-app/main/default/objects/NXLIBS__IntegrationLog__c/fields/NXLIBS__ErrorCode__c.field-meta.xml
<CustomField>
    <fullName>NXLIBS__ErrorCode__c</fullName>
    <label>ErrorCode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>