force-app/main/default/objects/NXLIBS__IntegrationLog__c/fields/NXLIBS__ErrorDescription__c.field-meta.xml
<CustomField>
    <fullName>NXLIBS__ErrorDescription__c</fullName>
    <label>Error Description</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>