force-app/main/default/objects/NXLIBS__IntegrationLog__c/fields/NXLIBS__PackageName__c.field-meta.xml
<CustomField>
    <fullName>NXLIBS__PackageName__c</fullName>
    <label>PackageName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>