force-app/main/default/objects/NXLIBS__IntegrationLog__c/fields/NXLIBS__Service__c.field-meta.xml
<CustomField>
    <fullName>NXLIBS__Service__c</fullName>
    <label>Service</label>
    <length>255</length>
    <type>Text</type>
</CustomField>