force-app/main/default/objects/NXLIBS__IntegrationLog__c/fields/NXLIBS__Status__c.field-meta.xml
<CustomField>
    <fullName>NXLIBS__Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Error</fullName>
                <default>true</default>
                <label>Error</label>
            </value>
            <value>
                <fullName>Success</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>