force-app/main/default/objects/NXLIBS__IntegrationLog__c/fields/NXLIBS__UniqueIdentifier__c.field-meta.xml
<CustomField>
    <fullName>NXLIBS__UniqueIdentifier__c</fullName>
    <formula>NXLIBS__PackageName__c &amp; &apos;¤&apos; &amp; TEXT(CreatedDate)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>UniqueIdentifier</label>
    <type>Text</type>
</CustomField>