force-app/main/default/objects/NXLIBS__IntegrationLog__c/listViews/NXLIBS__All.listView-meta.xml
<ListView>
    <fullName>NXLIBS__All</fullName>
    <columns>NAME</columns>
    <columns>NXLIBS__Status__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>NXLIBS__PackageName__c</columns>
    <columns>NXLIBS__ErrorDescription__c</columns>
    <columns>NXLIBS__ErrorCode__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>